# nlper

./: CMakeLists.txt  README.md
demo/: run_server.cpp
demo/demo_semtopic/: demo_doc_distance.cpp  demo_document_keywords.cpp  demo_inference.cpp  demo_query_doc_sim.cpp  demo_show_topic.cpp  demo_topic_word.cpp  demo_word_distance.cpp
include/analysis/: analysis_strategy.h  method_interface.h  method_semtopic.h
include/common/: common_define.h  http_client.h  plugin_factory.h  plugin_header.h  utils.h
include/config/: http_service.pb.h  nlper.pb.h
include/dict/: dict_adapter.h  dict_interface.h  dict_manager.h  dual_dict_wrapper.h
include/matching/: match_strategy.h  matching_interface.h
include/matching/lexical/: contain_sim.h  jaccard_sim.h
include/matching/semantic/: semtopic_dd_sim.h  semtopic_qd_sim.h
include/server/: ddmatch_postprocessor.h  ddmatch_preprocessor.h  http_server.h  http_service_impl.h  qdmatch_postprocessor.h  qdmatch_preprocessor.h  request_postprocess_interface.h  request_preprocess_interface.h  semtopic_postprocessor.h  semtopic_preprocessor.h  session_data_factory.h
include/strategy/: ddmatch_strategy.h  qdmatch_strategy.h  semtopic_strategy.h
proto/: http_service.proto  nlper.proto
pushonline/: run_server.sh
src/analysis/: analysis_strategy.cpp  method_interface.cpp  method_semtopic.cpp
src/common/: http_client.cpp  plugin_factory.cpp  utils.cpp
src/config/: http_service.pb.cc  nlper.pb.cc
src/dict/: dict_manager.cpp  dual_dict_wrapper.cpp  semtopic_adapter.cpp
src/matching/: match_strategy.cpp
src/matching/lexical/: contain_sim.cpp  jaccard_sim.cpp
src/matching/semantic/: semtopic_dd_sim.cpp  semtopic_qd_sim.cpp
src/server/: ddmatch_postprocessor.cpp  ddmatch_preprocessor.cpp  http_server.cpp  http_service_impl.cpp  qdmatch_postprocessor.cpp  qdmatch_preprocessor.cpp  semtopic_postprocessor.cpp  semtopic_preprocessor.cpp  session_data_factory.cpp
src/strategy/: ddmatch_strategy.cpp  qdmatch_strategy.cpp  semtopic_strategy.cpp
